--- a/4. Examples/secretmanager/index.html
+++ b/4. Examples/secretmanager/index.html
@@ -6,6 +6,10 @@
     that store. When you type in the password, the encrypted passwords will
     be visualized in the browser. No server communication, just on your local
     computer or browser. You can check the source code!
+
+    TODO: SHA integrity controle van de scripts die ingelezen worden
+    TODO: Wanneer het goed is opgeslagen, dit ook tonen
+    TODO: Wanneer het niet is opgeslagen of een fout, dit ook tonen
 -->
 <html>
 <head>
